打包时添加vm参数